--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid justify-content-center">
-          <a class="navbar-brand fw-bold text-success fs-1" href="index.html">Farhad Store</a>
+          <a class="navbar-brand fw-bold text-success fs-1">|/\| Farhad Store |\/|</a>
         </div>
       </nav>
     </section>
@@ -79,7 +79,7 @@
                 </tr>
                 <tr>
                   <th>Delivery-Charge:</th>
-                  <td>$ <span id="delivery-charge">20</span></td>
+                  <td>$ <span id="delivery-charge">0</span></td>
                   <td></td>
                   <td></td>
                 </tr>
