--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <!-- product display section -->
     <div class="container-fluid">
-      <div class="row mt-5 mb-5 p-5">
+      <div class="row mt-5 mb-5 px-3">
         <div class="col-md-9 col-lg-9 col-sm-7">
           <div id="all-products" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
