--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <!-- navbar -->
+  <!-- navbar area -->
   <header class="bg-light">
     <section class="container-fluid">
       <nav class="navbar navbar-expand-lg navbar-light">
@@ -43,7 +43,7 @@
         </div>
       </div>
     </div>
-    <!-- display product section -->
+    <!-- product display section -->
     <div class="container-fluid">
       <div class="row mt-5 mb-5 px-3">
         <div class="col-md-9 col-lg-9 col-sm-7">
@@ -109,7 +109,7 @@
     <p>&copy;Talhabin Islam Farhad </p>
   </footer>
 
-  <!-- javascript  file  -->
+  <!-- add javascript  file  -->
   <script src="./js/app.js"></script>
 </body>
 
